--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepe Fabra Valverde - M.L. & A.I. Portfolio</title>
+    <style>
+        *
+        {
+            box-sizing: border-box;
+        }
+
+        html,
+        body
+        {
+            padding: 0;
+            margin: 0;
+            font-family: 'Courier New', Courier, monospace;
+            text-rendering: optimizeLegibility;
+        }
+
+        #header
+        {
+            width: 100%;
+            background: #000;
+
+            color: white;
+            overflow: hidden;
+            padding: .5rem;
+        }
+
+        #header h1
+        {
+            margin-top: 0;
+        }
+
+        @media screen and (max-width: 800px) {
+            #header h1
+            {
+                margin: 0;
+                font-size: 1.75rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <header id="header">
