Add testing emmet

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,8 @@
     </header>
 
     <main id="main">
-        <h2>Hello World!</h2>
+        <!-- For testing purpose -->
+        <!-- (h2.title{Section Title}+p{lorem*5}+h3{Section Subtitle}*3+p{lorem*5}+h4{Subsection title}*4+p{lorem*5}+h5{Subsection subtitle}*3+p{lorem*5}+h6{Subsection Detail}*5+p{lorem*5})*3 -->
     </main>
 
     <footer id="footer">
