--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
                 margin: 0;
                 font-size: 1.75rem;
             }
+
+            #footer
+            {
+                padding: .5rem !important;
+            }
         }
 
         body
@@ -124,6 +129,18 @@
             text-align: left;
             text-align-last: left;
         }
+
+        #footer
+        {
+            background-color: black;
+            width: 100%;
+            padding: 2rem;
+        }
+
+        #footer a
+        {
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -165,7 +182,10 @@
     </main>
 
     <footer id="footer">
-        
+        <a href="https://linkedin.com/in/jofaval">LinkedIn</a>
+        <a href="https://github.com/jofaval">Github</a>
+        <a href="https://twitter.com/jofaval">Twitter</a>
+        <a href="https://reddit.com/user/jofaval">Reddit</a>
     </footer>
 </body>
 </html>
