Upload missing Stack Overflow social link

--- a/public/index.html
+++ b/public/index.html
@@ -186,6 +186,7 @@
         <a href="https://github.com/jofaval">Github</a>
         <a href="https://twitter.com/jofaval">Twitter</a>
         <a href="https://reddit.com/user/jofaval">Reddit</a>
+        <a href="https://stackoverflow.com/story/jofaval">Stack<strong>Overflow</strong></a>
     </footer>
 </body>
 </html>
